@@ -16,7 +16,6 @@ import org.taniwha.security.FileFilter;
 
 import java.io.IOException;
 import java.io.StringReader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -30,16 +29,12 @@ public class FileService {
     private static final Logger logger = LoggerFactory.getLogger(FileService.class);
 
     private final FileFilter fileFilter;
-
-    // Keep your original String folder fields for compatibility with existing methods
     private final String datasetsFolder;
     @Getter
     private final String mappedDatasetsFolder;
     private final String fhirMappingsFolder;
     private final String elementsFolder;
     private final String metadataFolder;
-
-    // Also keep Path forms for the explorer methods
     private final Path datasetsDir;
     private final Path mappedDatasetsDir;
     private final Path fhirMappingsDir;
@@ -49,19 +44,12 @@ public class FileService {
     public FileService(FileFilter fileFilter, @Value("${app.path}") String basePath) {
         this.fileFilter = fileFilter;
 
-        // Original behavior preserved (strings)
         this.datasetsFolder = basePath + "/datasets";
-
-        // NOTE: Your original code sets mappedDatasetsFolder = datasetsFolder.
-        // If that was intentional, keep it. If not, change to basePath + "/mapped_datasets".
-        // I'll keep your behavior exactly:
         this.mappedDatasetsFolder = this.datasetsFolder;
-
         this.fhirMappingsFolder = basePath + "/fhir_mappings";
         this.elementsFolder = basePath + "/dataset_elements";
         this.metadataFolder = basePath + "/dataset_metadata";
 
-        // Path normalized versions used by explorer operations
         Path base = Paths.get(basePath).normalize();
         this.datasetsDir = base.resolve("datasets").normalize();
         this.mappedDatasetsDir = this.datasetsDir; // keep your current behavior
@@ -69,10 +57,6 @@ public class FileService {
         this.elementsDir = base.resolve("dataset_elements").normalize();
         this.metadataDir = base.resolve("dataset_metadata").normalize();
     }
-
-    // =========================
-    // Existing functionality (kept)
-    // =========================
 
     public NodeMetadata parseNodeMetadata() {
         try {
@@ -85,7 +69,6 @@ public class FileService {
             String firstFileName = files.get(0);
             Path metaPath = Paths.get(metadataFolder, firstFileName);
 
-            // keep your filter usage
             fileFilter.validate(metaPath);
 
             String rdfContent = Files.readString(metaPath);
@@ -124,7 +107,7 @@ public class FileService {
         ds.setModified(getStringValue(dsRes, "http://purl.org/dc/terms/modified"));
         ds.setAccrualPeriodicity(getStringValue(dsRes, "http://purl.org/dc/terms/accrualPeriodicity"));
 
-        ds.setKeyword(getStringObjects(dsRes, "http://www.w3.org/ns/dcat#keyword"));
+        ds.setKeyword(getStringObjects(dsRes));
         ds.setTheme(getResourceURIs(dsRes, "http://www.w3.org/ns/dcat#theme"));
         ds.setLanguage(getResourceURIs(dsRes, "http://purl.org/dc/terms/language"));
 
@@ -231,17 +214,16 @@ public class FileService {
 
     public String saveDatasetElements(String fileName, String csvData) {
         try {
-            String sanitizedFileName = fileName.replaceAll("[^a-zA-Z0-9._-]", "_");
+            String sanitizedFileName = sanitizeFileName(fileName);
             sanitizedFileName = sanitizedFileName.replaceAll("(?i)\\.(csv|xlsx)$", "");
             String finalFileName = sanitizedFileName + "_elements.csv";
 
             String filePath = Paths.get(elementsFolder, finalFileName).toString();
 
-            // validate output path too
             Path outPath = Paths.get(filePath).normalize();
             fileFilter.validate(outPath);
 
-            Files.write(outPath, csvData.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(outPath, csvData);
             logger.info("Saved dataset elements to {}", filePath);
             return filePath;
         } catch (IOException e) {
@@ -257,12 +239,14 @@ public class FileService {
 
             return Files.list(dir)
                     .filter(Files::isRegularFile)
-                    .peek(p -> {
-                        try { fileFilter.validate(p); } catch (Exception ignored) {}
-                    })
                     .filter(p -> {
-                        try { fileFilter.validate(p); return true; }
-                        catch (Exception e) { return false; }
+                        try {
+                            fileFilter.validate(p);
+                            return true;
+                        } catch (Exception e) {
+                            logger.debug("File validation failed for {}: {}", p, e.getMessage());
+                            return false;
+                        }
                     })
                     .map(path -> path.getFileName().toString())
                     .collect(Collectors.toList());
@@ -275,14 +259,13 @@ public class FileService {
     private String getStringValue(Resource subject, String propertyUri) {
         Property prop = ResourceFactory.createProperty(propertyUri);
         Statement st = subject.getProperty(prop);
-        if (st != null && st.getObject().isLiteral())
-            return st.getObject().asLiteral().getString();
+        if (st != null && st.getObject().isLiteral()) return st.getObject().asLiteral().getString();
         return null;
     }
 
-    private List<String> getStringObjects(Resource subject, String propertyUri) {
+    private List<String> getStringObjects(Resource subject) {
         List<String> results = new ArrayList<>();
-        Property prop = ResourceFactory.createProperty(propertyUri);
+        Property prop = ResourceFactory.createProperty("http://www.w3.org/ns/dcat#keyword");
         StmtIterator it = subject.listProperties(prop);
         while (it.hasNext()) {
             Statement st = it.nextStatement();
@@ -296,9 +279,7 @@ public class FileService {
     private Resource getResourceObject(Resource subject, String propertyUri) {
         Property prop = ResourceFactory.createProperty(propertyUri);
         Statement st = subject.getProperty(prop);
-        if (st != null && st.getObject().isResource()) {
-            return st.getObject().asResource();
-        }
+        if (st != null && st.getObject().isResource()) return st.getObject().asResource();
         return null;
     }
 
@@ -306,8 +287,6 @@ public class FileService {
         Resource r = getResourceObject(subject, propertyUri);
         return (r != null) ? r.getURI() : null;
     }
-
-    // explorer
 
     private Path dirFor(FileCategory category) {
         return switch (category) {
@@ -319,8 +298,12 @@ public class FileService {
         };
     }
 
-    private Path resolveSafe(FileCategory category, String fileName) {
-        String safeName = fileName.replace("\\", "/");
+    public Path resolveExistingFilePath(FileCategory category, String fileName) {
+        return resolveSafeExistingFile(category, fileName);
+    }
+
+    private Path resolveSafePath(FileCategory category, String fileName) {
+        String safeName = String.valueOf(fileName).replace("\\", "/");
         if (safeName.contains("/")) {
             throw new IllegalArgumentException("Invalid file name");
         }
@@ -332,8 +315,25 @@ public class FileService {
             throw new IllegalArgumentException("Invalid path");
         }
 
-        fileFilter.validate(resolved);
         return resolved;
+    }
+
+    private Path resolveSafeExistingFile(FileCategory category, String fileName) {
+        Path p = resolveSafePath(category, fileName);
+
+        fileFilter.validate(p);
+
+        if (!Files.exists(p)) {
+            throw new IllegalArgumentException("File does not exist");
+        }
+        if (!Files.isRegularFile(p)) {
+            throw new IllegalArgumentException("Not a file");
+        }
+        return p;
+    }
+
+    private String sanitizeFileName(String name) {
+        return String.valueOf(name).replaceAll("[^a-zA-Z0-9._-]", "_");
     }
 
     public List<FileInfoDto> listFilesWithInfo(FileCategory category) {
@@ -381,13 +381,18 @@ public class FileService {
     }
 
     public void renameFile(FileCategory category, String from, String to) {
-        Path src = resolveSafe(category, from);
+        Path src = resolveSafeExistingFile(category, from);
 
-        String sanitizedTo = to.replaceAll("[^a-zA-Z0-9._-]", "_");
-        Path dst = resolveSafe(category, sanitizedTo);
+        String sanitizedTo = sanitizeFileName(to).trim();
+        if (sanitizedTo.isEmpty()) {
+            throw new IllegalArgumentException("Invalid destination name");
+        }
+
+        if (sanitizedTo.equals(from)) return;
+
+        Path dst = resolveSafePath(category, sanitizedTo);
 
         try {
-            if (!Files.exists(src)) throw new IllegalArgumentException("Source does not exist");
             if (Files.exists(dst)) throw new IllegalArgumentException("Destination already exists");
 
             try {
@@ -401,17 +406,14 @@ public class FileService {
     }
 
     public void deleteFile(FileCategory category, String name) {
-        Path p = resolveSafe(category, name);
+        Path p = resolveSafePath(category, name);
         try {
-            Files.deleteIfExists(p);
+            if (!Files.exists(p))
+                return;
+            fileFilter.validate(p);
+            Files.delete(p);
         } catch (IOException e) {
             throw new RuntimeException("Delete failed", e);
         }
-    }
-
-    public void cleanFilePlaceholder(FileCategory category, String name) {
-        Path p = resolveSafe(category, name);
-        if (!Files.exists(p)) throw new IllegalArgumentException("File does not exist");
-        // placeholder: no-op
     }
 }
